# empleaplus-ia-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
src/controllers/: __init__.py  auth_controller.py  capybara_resume_controller.py  resume_controller.py
src/core/: __init__.py  config.py  db_client.py  init_app.py  router.py
src/dependencies/: auth.py
src/generators/resume_capybara/: __init__.py  compile_pdf.py  cv_pdf_generator.py  formatter.py  latex_capybara.py  template.tex
src/generators/resume_pdf/: compile_pdf.py  cv_pdf_generator.py  formatter.py  template.tex
src/models/: __init__.py  capybara_resume.py  cv_schema.py  resume_schema.py  skill_entry.py  user_schema.py
src/repositories/: __init__.py  resume_repository.py  skills_repository.py  user_repository.py
src/resume_generator/: __init__.py  crew.py  main.py
src/resume_generator/config/: agents.yaml  tasks.yaml
src/resume_generator/knowledge/: cv_oraciones_modelo.txt  skills_catalog.txt
src/services/: __init__.py  auth_service.py  capybara_resume_service.py  resume_service.py  user_service.py
src/utils/: __init__.py  json_cleaner.py  resume_parser.py  resume_reference_builder.py  security.py  skills_extractor.py
tests/: conftest.py
tests/controllers/: test_auth_controller.py  test_resume_controller.py
tests/generators/: test_compile_pdf.py  test_cv_pdf_generator.py  test_formatter.py
tests/repositories/: test_resume_repository.py  test_skills_repository.py  test_users_repository.py
tests/resume_generator/: test_resume_generator.py
tests/services/: test_auth_service.py  test_resume_service.py  test_user_service.py
tests/utils/: test_build_resume_reference.py  test_build_skill_entry.py  test_clean_json_output.py  test_generate_uuid.py  test_parse_resume_json.py  test_security_utils.py
