[project]
name = "resume_generator"
version = "0.1.0"
description = "resume-generator using crewAI"
authors = [{ name = "Hugo Alejandro Apaza Huaycho", email = "apazahuaychohugoalejandro@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.38.27",
    "crewai[tools]>=0.105.0,<1.0.0",
    "docling>=2.31.0",
    "fastapi[standard]>=0.115.12",
    "uuid>=1.30",
]

[project.scripts]
resume_generator = "resume_generator.main:run"
run_crew = "resume_generator.main:run"
train = "resume_generator.main:train"
replay = "resume_generator.main:replay"
test = "resume_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
